# bin2h

./: CMakeLists.txt  Dependency.cmake
src/: main.cpp  util.cpp  util.h
